--- a/info.html
+++ b/info.html
@@ -5,9 +5,13 @@
    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
    <link rel="stylesheet" href="index.css">
    <script src="index.js"></script>
   </head>
   <body>
+    <div id="iframeDiv">
+      <iframe src="https://pl.wikipedia.org/wiki/Magia"></iframe>
+    </div>
   </body>
 </html>
