--- a/info.html
+++ b/info.html
@@ -8,6 +8,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
    <link rel="stylesheet" href="index.css">
    <script src="index.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/javascript-obfuscator/dist/index.browser.js"></script>
   </head>
   <body>
     <div id="iframeDiv">
