--- a/discord-popros-o-uprawnienia.htm
+++ b/discord-popros-o-uprawnienia.htm
@@ -22,6 +22,6 @@
 </head>
 
 <body>
-  <iframe src="https://bit.ly/discord-formularz-rejestracyjny"></iframe>
+  <iframe src= "https://forms.office.com/Pages/ResponsePage.aspx?id=JKjnj0H2e0ijvNzbetXfX-CmE5P9uu9AhM7Qw9oUTVlUOFk4Q0lMWVhSMVhWUUtJQ0ZDWjlDOEZRRC4u&embed=true" frameborder= "0" marginwidth= "0" marginheight= "0" style= "border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen></iframe>
 </body>
 </html>
